5-route.tf
################### public rtb #####################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  # default gateway route
  route {

    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id

  }

  tags = {

    Name = "terraform-public-rtb"

  }

}

resource "aws_route_table_association" "public_a" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {
  subnet_id      = aws_subnet.public_b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_c" {
  subnet_id      = aws_subnet.public_c.id
  route_table_id = aws_route_table.public.id
}


################### Private rtb #####################

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id

  # default gateway route
  route {

    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.main.id

  }

  tags = {

    Name = "terraform-private-rtb"

  }

}

resource "aws_route_table_association" "private_a" {

  subnet_id      = aws_subnet.private_a.id
  route_table_id = aws_route_table.private.id

}

resource "aws_route_table_association" "private_b" {

  subnet_id      = aws_subnet.private_b.id
  route_table_id = aws_route_table.private.id

}

resource "aws_route_table_association" "private_c" {

  subnet_id      = aws_subnet.private_c.id
  route_table_id = aws_route_table.private.id

}
